--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,10 @@ name: Cypress Tests
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   cypress-run:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run Cypress tests
         env:
-          CYPRESS_BASE_URL: "https://www.amazon.com.br" # Substitua pela URL exata que está usando para testes
+          CYPRESS_BASE_URL: "https://www.amazon.com.br"
         run: npx cypress run
 
       - name: Upload Cypress videos and screenshots (if tests fail)
